# vina

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  PROJECT_SPEC.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.zai/: settings.json
config/: default.json
docs/: ARCHITECTURE_GUIDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  PLUGIN_AUTHOR_GUIDE.md  RELEASE_GUIDE.md
plugins/example_enrichment/: plugin.py
plugins/example_report/: plugin.py
plugins/example_scanner/: plugin.py
scripts/: release.sh
tests/: test_aggregator.py  test_checkpoint.py  test_correlation.py  test_dependency.py  test_exploitability.py  test_feed_manager.py  test_findings.py  test_knowledge.py  test_os_auth_security.py  test_os_boot_security.py  test_os_container_security.py  test_os_crypto_security.py  test_os_gui_security.py  test_os_modules.py  test_os_monitoring_security.py  test_os_network_security.py  test_os_packages_security.py  test_os_storage_security.py  test_parsers.py  test_plugins.py  test_release.py  test_reports.py  test_runner.py  test_scheduler.py  test_stages.py  test_testing.py  test_vuln_intel.py
vina/: __init__.py  _version.py  cli.py
vina/ai/: __init__.py  analyzer.py
vina/core/: __init__.py  aggregator.py  checkpoint.py  config.py  correlation.py  dependency.py  exploitability.py  feed_manager.py  knowledge.py  logging.py  pipeline.py  runner.py  scheduler.py  storage.py  vuln_intel.py
vina/data/: cves.json
vina/models/: __init__.py  common.py  findings.py  stages.py
vina/modules/: __init__.py  aggregate.py  ai_analysis.py  common.py  crawl.py  historical_urls.py  host_discovery.py  parameter_discovery.py  port_scan.py  recon.py  tech_detection.py  vulnerability_scan.py
vina/parsers/: __init__.py  tool_outputs.py
vina/pipeline/: __init__.py  aggregator.py  web_pipeline.py
vina/plugins/: __init__.py  context.py  exceptions.py  hooks.py  loader.py  plugin.py  registry.py  sdk.py
vina/reports/: __init__.py  html.py  markdown.py  report.py
vina/scanners/: __init__.py  recon.py
vina/scanners/os/: __init__.py  capabilities.py  cron.py  docker.py  environment.py  filesystem.py  kernel.py  kernel_hardening.py  logs.py  network.py  os_pipeline.py  packages.py  privilege_escalation.py  processes.py  secrets.py  services.py  ssh.py  sudo.py  system_info.py  systemd.py  users.py
vina/scanners/os/auth_security/: __init__.py  credentials.py  pam.py  password.py  polkit.py  privesc_enhanced.py  sessions.py
vina/scanners/os/boot_security/: __init__.py  boot_files.py  grub.py  kernel_params.py  secure_boot.py
vina/scanners/os/container_security/: __init__.py  namespaces.py  runtimes.py  virtualization.py
vina/scanners/os/crypto_security/: __init__.py  kernel_crypto.py  ssh_ciphers.py  ssl_certs.py
vina/scanners/os/gui_security/: __init__.py  browsers.py  desktop.py  polkit.py  remote_desktop.py
vina/scanners/os/monitoring_security/: __init__.py  agents.py  auditing.py  syslog.py  time_sync.py
vina/scanners/os/network_security/: __init__.py  dns.py  firewall.py  listening_services.py  routing.py
vina/scanners/os/packages_security/: __init__.py  integrity.py  inventory.py  managers.py  repositories.py  supply_chain.py
vina/scanners/os/storage_security/: __init__.py  encryption.py  integrity.py  mounts.py  permissions.py
vina/scanners/web/: __init__.py  gau.py  httpx.py  katana.py  naabu.py  nmap.py  nuclei.py  recon.py  url_aggregator.py  waybackurls.py  whatweb.py
vina/testing/: __init__.py  benchmark.py  datasets.py  fixtures.py  integration.py  metrics.py  runner.py  sandbox.py
