[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vina"
version = "0.1.0"
description = "AI-assisted security automation framework for reconnaissance and analysis"
readme = "PROJECT_SPEC.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vina = "vina.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["vina*"]
