[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vina"
version = "0.1.0"
description = "AI-assisted security automation framework for reconnaissance and analysis"
readme = "PROJECT_SPEC.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "VINA Team", email = "vina@example.com"},
]
keywords = ["security", "audit", "reconnaissance", "vulnerability", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Security :: Vulnerability Management",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pyyaml>=6.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "black>=24.0",
  "mypy>=1.8",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=3.6",
]
plugins = [
  "importlib-metadata>=7.0",
]
testing = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "psutil>=5.9",
]
docs = [
  "sphinx>=7.2",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=2.0",
]
release = [
  "build>=1.0",
  "twine>=5.0",
  "cyclonedx-bom>=4.0",
]
full = [
  "vina[dev,plugins,testing,docs,release]",
]

[project.urls]
Homepage = "https://github.com/anomalyco/vina"
Repository = "https://github.com/anomalyco/vina"
Documentation = "https://vina.readthedocs.io"
Issues = "https://github.com/anomalyco/vina/issues"

[project.scripts]
vina = "vina.cli:app"

[project.entry-points."vina.plugins"]
# External plugins register here via::
#   example = "example_package.plugin:ExamplePlugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["vina*"]

# =========================================================================
#  Ruff (linting)
# =========================================================================

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "E", "F", "W",    # pyflakes, pycodestyle
  "I",              # isort
  "N",              # pep8-naming
  "UP",             # pyupgrade
  "B",              # flake8-bugbear
  "C4",             # flake8-comprehensions
  "SIM",            # flake8-simplify
  "ARG",            # flake8-unused-arguments
  "RUF",            # ruff-specific
]
ignore = [
  "E501",           # line-length handled by black
  "B905",           # zip() without strict=
]

[tool.ruff.format]
quote-style = "double"

# =========================================================================
#  Black (formatting)
# =========================================================================

[tool.black]
line-length = 120
target-version = ["py312"]
skip-magic-trailing-comma = true

# =========================================================================
#  mypy (type checking)
# =========================================================================

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "vina.plugins.*",
  "vina.testing.*",
  "tests.*",
  "plugins.*",
]
ignore_errors = true


# =========================================================================
#  Bandit (security linter)
# =========================================================================

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git"]
skips = ["B101", "B404", "B603", "B607"]

# =========================================================================
#  pytest
# =========================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "test_*"]
log_cli_level = "WARNING"

[tool.coverage.run]
source = ["vina"]
omit = [
  "vina/plugins/tests/*",
  "tests/*",
  ".venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\b",
  "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

# =========================================================================
#  pip-audit
# =========================================================================

[tool.pip-audit]
ignore-vulnerabilities = []

# =========================================================================
#  setuptools-scm (optional, for automatic version from git tags)
# =========================================================================

[tool.setuptools_scm]
write_to = "vina/_version.py"
